--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   format:
-    name: format
+    name: Format and compile with warnings as errors
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -12,14 +12,17 @@ jobs:
       - name: Install OTP and Elixir
         uses: actions/setup-elixir@v1
         with:
-          otp-version: 22.3
-          elixir-version: 1.10.2
+          otp-version: 23.0
+          elixir-version: 1.11.2
 
       - name: Install dependencies
         run: mix deps.get
 
       - name: Run "mix format"
         run: mix format --check-formatted
+
+      - name: Run "mix compile --warnings-as-errors"
+        run: mix compile --warnings-as-errors
 
   test:
     name: Test
@@ -28,10 +31,16 @@ jobs:
       fail-fast: false
       matrix:
         pair:
+          - erlang: 23.0
+            elixir: 1.11.2
+            coverage: true
           - erlang: 22.3
             elixir: 1.10.2
           - erlang: 20.3
             elixir: 1.6.6
+    env:
+      MIX_ENV: test
+      GITHUB_SECRET: ${{secrets.GITHUB_SECRET}}
     steps:
       - uses: actions/checkout@v1
 
@@ -42,7 +51,12 @@ jobs:
           elixir-version: ${{matrix.pair.elixir}}
 
       - name: Install dependencies
-        run: mix deps.get
+        run: mix deps.get --only test
 
       - name: Run tests
         run: mix test --trace
+        if: ${{!matrix.coverage}}
+
+      - name: Run tests with coverage
+        run: mix coveralls.github --trace
+        if: ${{matrix.coverage}}
