--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pair:
+        include:
           - erlang: 23.0
             elixir: 1.11.2
             coverage: true
@@ -40,15 +40,15 @@ jobs:
             elixir: 1.6.6
     env:
       MIX_ENV: test
-      GITHUB_SECRET: ${{secrets.GITHUB_SECRET}}
+      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
     steps:
       - uses: actions/checkout@v1
 
       - name: Install OTP and Elixir
         uses: actions/setup-elixir@v1
         with:
-          otp-version: ${{matrix.pair.erlang}}
-          elixir-version: ${{matrix.pair.elixir}}
+          otp-version: ${{matrix.erlang}}
+          elixir-version: ${{matrix.elixir}}
 
       - name: Install dependencies
         run: mix deps.get --only test
