--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,62 +1,47 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  pull_request:
+  push:
+    branches:
+      - master
 
 jobs:
-  format:
-    name: Format and compile with warnings as errors
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-
-      - name: Install OTP and Elixir
-        uses: actions/setup-elixir@v1
-        with:
-          otp-version: 23.0
-          elixir-version: 1.11.2
-
-      - name: Install dependencies
-        run: mix deps.get
-
-      - name: Run "mix format"
-        run: mix format --check-formatted
-
-      - name: Run "mix compile --warnings-as-errors"
-        run: mix compile --warnings-as-errors
-
   test:
-    name: Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
+    env:
+      MIX_ENV: test
     strategy:
       fail-fast: false
       matrix:
         include:
-          - erlang: 23.0
-            elixir: 1.11.2
-            coverage: true
-          - erlang: 22.3
-            elixir: 1.10.2
-          - erlang: 20.3
-            elixir: 1.6.6
-    env:
-      MIX_ENV: test
-      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          - pair:
+              elixir: 1.6.6
+              otp: 19.3.6.13
+          - pair:
+              elixir: 1.11.3
+              otp: 23.2.5
+            lint: lint
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
-      - name: Install OTP and Elixir
-        uses: actions/setup-elixir@v1
+      - uses: erlef/setup-elixir@v1
         with:
-          otp-version: ${{matrix.erlang}}
-          elixir-version: ${{matrix.elixir}}
+          otp-version: ${{matrix.pair.otp}}
+          elixir-version: ${{matrix.pair.elixir}}
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: mix deps.get --only test
 
-      - name: Run tests
-        run: mix test --trace
-        if: ${{!matrix.coverage}}
+      - run: mix format --check-formatted
+        if: ${{ matrix.lint }}
 
-      - name: Run tests with coverage
-        run: mix coveralls.github --trace
-        if: ${{matrix.coverage}}
+      - run: mix deps.get && mix deps.unlock --check-unused
+        if: ${{ matrix.lint }}
+
+      - run: mix deps.compile
+
+      - run: mix compile --warnings-as-errors
+        if: ${{ matrix.lint }}
+
+      - run: mix test
