Add Dialyzer and run it in CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,20 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-mix-
 
+      # Don't cache PLTs based on mix.lock hash, as Dialyzer can incrementally update even old ones
+      # Cache key based on Elixir & Erlang version (also useful when running in matrix)
+      - name: Cache Dialyzer's PLT
+        uses: actions/cache@v2
+        id: cache-plt
+        with:
+          path: priv/plts
+          key: ${{ runner.os }}-otp${{ matrix.otp }}-elixir${{ matrix.elixir }}
+
+      # Create PLTs if no cache was found
+      - name: Create PLTs
+        if: steps.cache-plt.outputs.cache-hit != 'true'
+        run: mix dialyzer --plt
+
       - run: mix deps.get
 
       - run: mix format --check-formatted
@@ -53,3 +67,5 @@ jobs:
         if: ${{ matrix.lint }}
 
       - run: mix test
+
+      - run: mix dialyzer
