--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
       - run: mix format --check-formatted
         if: ${{ matrix.lint }}
 
-      - run: mix deps.unlock --check-unused
+      - run: mix do deps.get, deps.unlock --check-unused
         if: ${{ matrix.lint }}
 
       - run: mix deps.compile
